hphp/hack/test/typecheck/is_expression/invalid_hint_void.php.exp
File "invalid_hint_void.php", line 4, characters 13-16:
You can only use the `void` type as the return type of a function or method (Naming[2063])
File "invalid_hint_void.php", line 4, characters 13-16:
Invalid `is` expression hint (Typing[4195])
  File "invalid_hint_void.php", line 4, characters 13-16:
  The `is` operator cannot be used with the `void` type
